Updated homepage copy and card 1-3 copy

--- a/website/index.html
+++ b/website/index.html
@@ -473,20 +473,20 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1 class="wordmark">FANTASY RECKONING</h1>
-        <p class="tagline">Your judgment day has arrived. Every mistake laid bare. Every missed opportunity counted. The data does not lie.</p>
-        <a href="#email" class="cta-button">FACE YOUR RECKONING</a>
+        <p class="tagline">Your League's Reckoning for Fantasty Football</p>
+        <a href="#email" class="cta-button">CONTINUE</a>
     </section>
 
     <!-- Features Section -->
     <section class="features">
-        <h2 class="section-title">Your Complete Reckoning</h2>
-        <p class="section-subtitle">Every decision. Every lineup mistake. Every point left on the bench. Analyzed. Judged. Revealed.</p>
+        <h2 class="section-title">Your Reckoning Awaits</h2>
+        <p class="section-subtitle">Five cards of inexorable truth.</p>
 
         <div class="cards-grid">
             <div class="card-preview">
                 <div class="card-number">CARD 1</div>
                 <h3 class="card-title">The Reckoning</h3>
-                <p class="card-description">Your season's final judgment. Every skill measured, every weakness exposed.</p>
+                <p class="card-description">The story of your season, laid bare.</p>
 
                 <div class="card-data">
                     <div class="grade-label">MEDIOCRE</div>
@@ -553,8 +553,8 @@
 
             <div class="card-preview">
                 <div class="card-number">CARD 2</div>
-                <h3 class="card-title">The Roster</h3>
-                <p class="card-description">How you built your team—draft, waivers, trades. Every acquisition judged.</p>
+                <h3 class="card-title">The Ledger</h3>
+                <p class="card-description">Your season measured in points, the true currency of glory.</p>
 
                 <div class="card-data">
                     <div class="grade-label">ACQUISITION STRATEGY</div>
@@ -604,8 +604,8 @@
 
             <div class="card-preview">
                 <div class="card-number">CARD 3</div>
-                <h3 class="card-title">The Decisions</h3>
-                <p class="card-description">Every lineup choice, every pivotal mistake. Your efficiency—and what it cost you.</p>
+                <h3 class="card-title">The Campaign</h3>
+                <p class="card-description">How you moved your pieces on the board.</p>
 
                 <div class="card-data">
                     <div class="stat-highlight">
