Copy updates, cards 3-5, elsewhere

--- a/website/index.html
+++ b/website/index.html
@@ -484,7 +484,7 @@
 
         <div class="cards-grid">
             <div class="card-preview">
-                <div class="card-number">CARD 1</div>
+                <div class="card-number">I</div>
                 <h3 class="card-title">The Reckoning</h3>
                 <p class="card-description">The story of your season, laid bare.</p>
 
@@ -552,9 +552,9 @@
             </div>
 
             <div class="card-preview">
-                <div class="card-number">CARD 2</div>
+                <div class="card-number">II</div>
                 <h3 class="card-title">The Ledger</h3>
-                <p class="card-description">Your season measured in points, the true currency of glory.</p>
+                <p class="card-description">Points are the true currency of glory.</p>
 
                 <div class="card-data">
                     <div class="grade-label">ACQUISITION STRATEGY</div>
@@ -603,7 +603,7 @@
             </div>
 
             <div class="card-preview">
-                <div class="card-number">CARD 3</div>
+                <div class="card-number">III</div>
                 <h3 class="card-title">The Campaign</h3>
                 <p class="card-description">How you moved your pieces on the board.</p>
 
@@ -650,9 +650,9 @@
             </div>
 
             <div class="card-preview">
-                <div class="card-number">CARD 4</div>
-                <h3 class="card-title">The Performance</h3>
-                <p class="card-description">Skill versus luck. Wins earned versus wins gifted. Your truth revealed.</p>
+                <div class="card-number">IV</div>
+                <h3 class="card-title">The Design</h3>
+                <p class="card-description">How fate and folly intertwined</p>
 
                 <div class="card-data">
                     <div class="grade-label">WIN ATTRIBUTION</div>
@@ -695,9 +695,9 @@
             </div>
 
             <div class="card-preview">
-                <div class="card-number">CARD 5</div>
+                <div class="card-number">V</div>
                 <h3 class="card-title">The Legacy</h3>
-                <p class="card-description">Your season's story. The moments that defined you, the legacy you leave.</p>
+                <p class="card-description">The moments that defined you, the legacy you leave.</p>
 
                 <div class="card-data">
                     <div class="stat-highlight">
@@ -748,7 +748,7 @@
     <!-- Pricing Section -->
     <section class="pricing">
         <h2 class="section-title">Meet Your Maker (for Free)</h2>
-        <p class="section-subtitle">Your reckoning comes at no cost. But if you find value in the brutal truth, support is appreciated.</p>
+        <p class="section-subtitle">Your reckoning comes at no cost</p>
 
         <div class="price-box">
             <div class="price">FREE</div>
@@ -756,16 +756,15 @@
 
             <ul class="price-features">
                 <li>5 personalized cards revealing your truth</li>
-                <li>20+ brutal, data-driven insights</li>
-                <li>Excellence breakdown across all dimensions</li>
-                <li>Shareable format for maximum humiliation</li>
+                <li>20+ data-driven insights</li>
+                <li>Shareable format</li>
                 <li>Full support for Yahoo Fantasy leagues</li>
             </ul>
 
             <a href="#email" class="cta-button">JOIN WAITLIST</a>
 
             <div style="margin-top: 2rem; padding-top: 2rem; border-top: 1px solid rgba(232, 213, 181, 0.2);">
-                <p style="font-size: 0.95rem; opacity: 0.7; margin-bottom: 1rem;">If Fantasy Reckoning helps you, consider supporting the project:</p>
+                <p style="font-size: 0.95rem; opacity: 0.7; margin-bottom: 1rem;">If you enjoyed Fantasy Reckoning, we would be grateful for your support:</p>
                 <a href="https://buymeacoffee.com/fantasyreckoning" target="_blank" class="cta-button" style="background-color: rgba(130, 87, 52, 0.5); font-size: 1rem; padding: 0.75rem 1.5rem;">☕ Buy Me a Coffee</a>
             </div>
         </div>
@@ -773,8 +772,8 @@
 
     <!-- Email Capture Section -->
     <section class="email-capture" id="email">
-        <h2 class="section-title">The Reckoning Begins</h2>
-        <p class="section-subtitle">Join the waitlist. Be among the first to face your reckoning.</p>
+        <h2 class="section-title">Your Reckoning Awaits</h2>
+        <p class="section-subtitle">Be among the first to face your reckoning.</p>
 
         <form class="email-form" name="waitlist" method="POST" data-netlify="true">
             <input type="hidden" name="form-name" value="waitlist" />
@@ -790,7 +789,7 @@
             <span class="social-separator"> | </span>
             <a href="https://instagram.com/fantasyreckoning" class="social-link" target="_blank">@fantasyreckoning on Instagram</a>
         </div>
-        <p class="footer-text">&copy; 2025 Fantasy Reckoning. The ledger does not lie.</p>
+        <p class="footer-text">&copy; 2025 Fantasy Reckoning</p>
     </footer>
 </body>
 </html>
