--- a/website/index.html
+++ b/website/index.html
@@ -748,7 +748,7 @@
     <!-- Pricing Section -->
     <section class="pricing">
         <h2 class="section-title">Meet Your Maker (for Free)</h2>
-        <p class="section-subtitle">Your reckoning comes at no cost</p>
+        <p class="section-subtitle">Your reckoning comes at no cost.</p>
 
         <div class="price-box">
             <div class="price">FREE</div>
