feature copy update

--- a/website/index.html
+++ b/website/index.html
@@ -755,7 +755,7 @@
             <div class="price-detail">all features, all leagues</div>
 
             <ul class="price-features">
-                <li>5 personalized cards revealing your truth</li>
+                <li>5 personalized cards</li>
                 <li>20+ data-driven insights</li>
                 <li>Shareable format</li>
                 <li>Full support for Yahoo Fantasy leagues</li>
