--- a/website/index.html
+++ b/website/index.html
@@ -752,10 +752,9 @@
 
         <div class="price-box">
             <div class="price">FREE</div>
-            <div class="price-detail">all features, all leagues</div>
 
             <ul class="price-features">
-                <li>5 personalized cards</li>
+                <li>5 personalized cards for each manager</li>
                 <li>20+ data-driven insights</li>
                 <li>Shareable format</li>
                 <li>Full support for Yahoo Fantasy leagues</li>
