--- a/website/index.html
+++ b/website/index.html
@@ -645,8 +645,7 @@
                 <p class="card-description">The story of your season, laid bare.</p>
 
                 <div class="card-data">
-                    <div class="grade-label">THE TINKERER</div>
-                    <div style="font-size: 0.9rem; opacity: 0.75; font-style: italic; margin-top: 0.25rem; margin-bottom: 0.75rem;">Forever tweaking, never still</div>
+                    <div class="grade-label">YOUR EXCELLENCE</div>
                     <div class="draft-grade">D-</div>
 
                     <div class="card-stat">
@@ -881,20 +880,12 @@
 
                 <div class="card-data">
                     <div class="stat-highlight">
-                        <div class="stat-highlight-value">The Phoenix Rising</div>
-                        <div class="stat-highlight-label">YOUR SEASON ARC</div>
-                        <div style="font-size: 0.85rem; opacity: 0.7; margin-top: 0.5rem;">Started 1-3, rallied to 5-5, faded to 7-7</div>
+                        <div class="stat-highlight-value" style="font-size: 2rem;">THE TINKERER</div>
+                        <div class="stat-highlight-label" style="font-style: italic; opacity: 0.8; margin-top: 0.5rem;">Forever tweaking, never still</div>
                     </div>
 
                     <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid rgba(232, 213, 181, 0.2);">
-                        <div class="stat-highlight">
-                            <div class="stat-highlight-value" style="font-size: 1.8rem;">THE TINKERER</div>
-                            <div class="stat-highlight-label" style="font-style: italic; opacity: 0.8; margin-top: 0.5rem;">Forever tweaking, never still</div>
-                        </div>
-                    </div>
-
-                    <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid rgba(232, 213, 181, 0.2);">
-                        <div class="legacy-section-header">THY BADGES & MARKS</div>
+                        <div class="legacy-section-header">DEFINING BADGES & MARKS</div>
 
                         <div class="legacy-achievements">
                             <!-- Badge 1: Tier 2 -->
