--- a/website/index.html
+++ b/website/index.html
@@ -648,13 +648,13 @@
             <div style="padding: 2rem;">
                 <div style="font-size: 3rem; margin-bottom: 1rem;">2</div>
                 <h3 style="font-family: 'Playfair Display', serif; font-size: 1.5rem; margin-bottom: 1rem; color: #e8d5b5;">We Analyze Everything</h3>
-                <p style="opacity: 0.8;">Our system calculates your draft performance, lineup efficiency, bye week management, and waiver activity.</p>
+                <p style="opacity: 0.8;">Our system analyzes each manager's decisions and performance</p>
             </div>
 
             <div style="padding: 2rem;">
                 <div style="font-size: 3rem; margin-bottom: 1rem;">3</div>
                 <h3 style="font-family: 'Playfair Display', serif; font-size: 1.5rem; margin-bottom: 1rem; color: #e8d5b5;">Get Your Reckoning</h3>
-                <p style="opacity: 0.8;">Receive 4 personalized cards showing your archetype, strengths, weaknesses, and season story.</p>
+                <p style="opacity: 0.8;">Receive 4 personalized cards for each manager</p>
             </div>
         </div>
 
@@ -670,7 +670,7 @@
             <div class="card-preview">
                 <div class="card-number">1</div>
                 <h3 class="card-title">Overview</h3>
-                <p class="card-description">Your season at a glance - skill percentiles and manager archetype.</p>
+                <p class="card-description">Your season at a glance, and how you stacked up against your rivals</p>
 
                 <div class="card-data">
                     <div style="text-align: center; padding: 1.5rem 0; border-bottom: 1px solid rgba(232, 213, 181, 0.2);">
@@ -728,11 +728,11 @@
             <div class="card-preview">
                 <div class="card-number">2</div>
                 <h3 class="card-title">The Ledger</h3>
-                <p class="card-description">Where your points came from - draft, waivers, trades, and drops.</p>
+                <p class="card-description">Where your points came from (and where they went)</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1.5rem;">
-                        <div style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.75rem; letter-spacing: 0.05em;">YOUR POINTS STORY</div>
+                        <div style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.75rem; letter-spacing: 0.05em;">YOUR BALANCE</div>
                         <div style="display: flex; justify-content: space-between; padding: 0.5rem 0; border-bottom: 1px solid rgba(232, 213, 181, 0.1);">
                             <span style="opacity: 0.8;">Draft</span>
                             <span style="font-weight: 600;">1,474 pts</span>
@@ -780,7 +780,7 @@
             <div class="card-preview">
                 <div class="card-number">3</div>
                 <h3 class="card-title">Lineups</h3>
-                <p class="card-description">Your weekly lineup decisions and efficiency.</p>
+                <p class="card-description">How you deployed your roster.</p>
 
                 <div class="card-data">
                     <div class="stat-highlight">
@@ -826,8 +826,8 @@
 
             <div class="card-preview">
                 <div class="card-number">4</div>
-                <h3 class="card-title">Story</h3>
-                <p class="card-description">How your wins were earned - skill vs luck breakdown.</p>
+                <h3 class="card-title">The Arc</h3>
+                <p class="card-description">The story of your season, where fate and folly intertwined</p>
 
                 <div class="card-data">
                     <div class="grade-label">WIN ATTRIBUTION</div>
