card title updates

--- a/website/index.html
+++ b/website/index.html
@@ -669,8 +669,8 @@
         <div class="cards-grid">
             <div class="card-preview">
                 <div class="card-number">1</div>
-                <h3 class="card-title">Overview</h3>
-                <p class="card-description">Your season at a glance, and how you stacked up against your rivals</p>
+                <h3 class="card-title">The Leader</h3>
+                <p class="card-description">How you played and stacked up against your rivals</p>
 
                 <div class="card-data">
                     <div style="text-align: center; padding: 1.5rem 0; border-bottom: 1px solid rgba(232, 213, 181, 0.2);">
@@ -779,8 +779,8 @@
 
             <div class="card-preview">
                 <div class="card-number">3</div>
-                <h3 class="card-title">Lineups</h3>
-                <p class="card-description">How you deployed your roster.</p>
+                <h3 class="card-title">The Lineup</h3>
+                <p class="card-description">How you deployed your roster in battle</p>
 
                 <div class="card-data">
                     <div class="stat-highlight">
@@ -826,7 +826,7 @@
 
             <div class="card-preview">
                 <div class="card-number">4</div>
-                <h3 class="card-title">The Arc</h3>
+                <h3 class="card-title">The Legend</h3>
                 <p class="card-description">The story of your season, where fate and folly intertwined</p>
 
                 <div class="card-data">
