--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,24 @@
             color: #e8d5b5;
             line-height: 1.6;
             overflow-x: hidden;
+            position: relative;
+        }
+
+        /* Fixed background image */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('background.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            opacity: 0.15;
+            z-index: -1;
+            pointer-events: none;
         }
 
         /* Hero Section */
