Make section backgrounds semi-transparent to show background image
- All sections now use rgba() with 0.85 opacity
- Background image visible throughout page
- Maintains dark overlay for readability

--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,7 @@
             align-items: center;
             text-align: center;
             padding: 2rem;
-            background: linear-gradient(180deg, #252a34 0%, #3d4450 100%);
+            background: linear-gradient(180deg, rgba(37, 42, 52, 0.85) 0%, rgba(61, 68, 80, 0.85) 100%);
             position: relative;
         }
 
@@ -117,7 +117,7 @@
         /* Features Section */
         .features {
             padding: 6rem 2rem;
-            background-color: #3d4450;
+            background-color: rgba(61, 68, 80, 0.85);
             text-align: center;
         }
 
@@ -349,7 +349,7 @@
         /* Pricing Section */
         .pricing {
             padding: 6rem 2rem;
-            background-color: #252a34;
+            background-color: rgba(37, 42, 52, 0.85);
             text-align: center;
         }
 
@@ -389,7 +389,7 @@
         /* Email Capture */
         .email-capture {
             padding: 6rem 2rem;
-            background-color: #3d4450;
+            background-color: rgba(61, 68, 80, 0.85);
             text-align: center;
         }
 
@@ -441,7 +441,7 @@
         /* Footer */
         .footer {
             padding: 3rem 2rem;
-            background-color: #252a34;
+            background-color: rgba(37, 42, 52, 0.85);
             text-align: center;
             border-top: 1px solid rgba(232, 213, 181, 0.1);
         }
