--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('background.png');
+            background-image: url('background2.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
