--- a/website/index.html
+++ b/website/index.html
@@ -873,11 +873,11 @@
             <div class="card-preview">
                 <div class="card-number">3</div>
                 <h3 class="card-title">The Lineup</h3>
-                <p class="card-description">How you deployed your roster in battle</p>
+                <p class="card-description">How you played your pieces on the board</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1.5rem;">
-                        <div style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.75rem; letter-spacing: 0.05em;">YOUR PERFORMANCE</div>
+                        <div style="font-size: 0.85rem; opacity: 0.6; margin-bottom: 0.75rem; letter-spacing: 0.05em;">THE DEPLOYMENT</div>
                         <div style="display: flex; justify-content: space-between; padding: 0.5rem 0; border-bottom: 1px solid rgba(232, 213, 181, 0.1);">
                             <span style="font-family: 'League Gothic', sans-serif; font-size: 0.85rem; letter-spacing: 0.05em; opacity: 0.8; text-transform: uppercase;">Lineup Efficiency</span>
                             <span style="font-family: 'League Gothic', sans-serif; font-size: 0.9rem; letter-spacing: 0.05em; text-transform: uppercase;">76.0% <span style="opacity: 0.6; font-size: 0.8rem;">(12th)</span></span>
@@ -938,14 +938,14 @@
             <div class="card-preview">
                 <div class="card-number">4</div>
                 <h3 class="card-title">The Legend</h3>
-                <p class="card-description">The story of your season, where fate and folly intertwined</p>
+                <p class="card-description">How fate and folly intertwined</p>
 
                 <div class="card-data">
                     <!-- Top Section: The Reckoning (True Skill Record) -->
                     <div class="stat-highlight" style="margin-bottom: 1.5rem;">
                         <div class="stat-highlight-value">7-7</div>
                         <div class="stat-highlight-label">THE RECKONING</div>
-                        <div style="font-family: 'EB Garamond', serif; font-size: 0.85rem; opacity: 0.7; margin-top: 0.5rem;">Your true skill record, stripped of fortune's favor</div>
+                        <div style="font-family: 'EB Garamond', serif; font-size: 0.85rem; opacity: 0.7; margin-top: 0.5rem;">Your record, stripped of fortune's favor</div>
                     </div>
 
                     <div class="grade-label">WIN ATTRIBUTION</div>
