--- a/website/index.html
+++ b/website/index.html
@@ -724,7 +724,6 @@
     <!-- How It Works Section -->
     <section style="padding: 4rem 2rem; background-color: #252a34; text-align: center;">
         <h2 class="section-title">How It Works</h2>
-        <p class="section-subtitle">3 steps to face your reckoning</p>
 
         <div style="max-width: 1000px; margin: 3rem auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
             <div style="padding: 2rem;">
@@ -822,7 +821,7 @@
 
             <div class="card-preview">
                 <h3 class="card-title">The Ledger</h3>
-                <p class="card-description">Where your points came from (and where they went)</p>
+                <p class="card-description">How you earned your points — and how you squandered them.</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1.5rem;">
@@ -879,7 +878,7 @@
 
             <div class="card-preview">
                 <h3 class="card-title">The Lineup</h3>
-                <p class="card-description">How you played your pieces on the board</p>
+                <p class="card-description">How you placed your pieces on the board</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1.5rem;">
@@ -943,7 +942,7 @@
                         <div style="font-size: 0.85rem; opacity: 0.6; letter-spacing: 0.05em; margin-bottom: 0.5rem;">THE RECKONING</div>
                         <div style="text-align: center;">
                             <div style="font-family: 'League Gothic', sans-serif; font-size: 2.5rem; letter-spacing: 0.05em; text-transform: uppercase; color: #b8864f;">7-7</div>
-                            <div style="font-family: 'EB Garamond', serif; font-size: 0.85rem; opacity: 0.7; margin-top: 0.25rem;">Your true skill record, stripped of fortune's favor</div>
+                            <div style="font-family: 'EB Garamond', serif; font-size: 0.85rem; opacity: 0.7; margin-top: 0.25rem;">Your true record revealed</div>
                         </div>
                     </div>
 
