--- a/website/index.html
+++ b/website/index.html
@@ -756,7 +756,7 @@
         <div class="cards-grid">
             <div class="card-preview">
                 <h3 class="card-title">The Leader</h3>
-                <p class="card-description">How you played and stacked up against your rivals</p>
+                <p class="card-description">How you measured against your rivals</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1rem;">
@@ -821,7 +821,7 @@
 
             <div class="card-preview">
                 <h3 class="card-title">The Ledger</h3>
-                <p class="card-description">How you earned your points — and how you squandered them.</p>
+                <p class="card-description">How you earned your points — and squandered them.</p>
 
                 <div class="card-data">
                     <div style="margin-bottom: 1.5rem;">
